--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -11,12 +11,12 @@
     <h4>Jasmine Stewart - Peanut Butter Jelly Time!</h4>
     <h4>Angel Pangilinan - I am not fast (Baymax)</h4>
 
-    <p><img src="D:\CTK CLASSWORK\Assignment 2\Images\eyes.JPEG" alt="eyes"></p>
+    <p><img src="https://samkobet.github.io/CTK301/Assignment%202/Images/eyes.JPEG" alt="eyes"></p>
     <p>Its a dude with goggles on looking fabulous with some workers in the background. Big header that says "Save You Eyes Use Your Goggles" from WPA Illinois Safety Division.</p>
     <ul>
-  <li><a href="D:\CTK CLASSWORK\Assignment 2\Poster.html">Poster</a></li>
-  <li><a href="D:\CTK CLASSWORK\Assignment 2\Teeth.html">Teeth</a></li>
-  <li><a href="D:\CTK CLASSWORK\Assignment 2\Zoo.html">Zoo</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Assignment 2/Poster.html">Poster</a></li>
+  <li><a href=https://samkobet.github.io/CTK301/Assignment%202/Teeth.html">Teeth</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Zoo.html">Zoo</a></li>
 </ul>
 
 
