--- a/Assignment 2/Teeth.html
+++ b/Assignment 2/Teeth.html
@@ -5,13 +5,13 @@
     <title>Exercise 2 - Teeth</title>
   </head>
   <body>
-    <p><img src="D:\CTK CLASSWORK\Assignment 2\Images\Teeth.jpg" alt="teeth"></p>
+    <p><img src="https://samkobet.github.io/CTK301/Assignment%202/Images/Teeth.jpg" alt="teeth"></p>
     <p>An almost black and white poster with a guy and a toothbrush showing off his teeth. Big header on the top and bottom saying "KEEP YOUR TEETH CLEAN". Sounds vaguely threatening.</p>
 
     <ul>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\index.html">Index</a></li>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\Poster.html">Poster</a></li>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\Zoo.html">Zoo</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/index.html">Index</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Poster.html">Poster</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Zoo.html">Zoo</a></li>
     </ul>
   </body>
 </html>
