--- a/Assignment 2/Poster.html
+++ b/Assignment 2/Poster.html
@@ -5,13 +5,13 @@
     <title>Exercise 2 - Poster</title>
   </head>
   <body>
-    <p><img src="D:\CTK CLASSWORK\Assignment 2\Images\Posters.png" alt="poster"></p>
+    <p><img src="https://samkobet.github.io/CTK301/Assignment%202/Images/Posters.png" alt="poster"></p>
     <p>A very stylized guy in black holding a poster that says "Exhibition of Posters". From the Federal Art Project Works Progress Administration.</p>
 
     <ul>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\index.html">Index</a></li>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\Teeth.html">Teeth</a></li>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\Zoo.html">Zoo</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/index.html">Index</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Teeth.html">Teeth</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Zoo.html">Zoo</a></li>
     </ul>
   </body>
 </html>
