--- a/Assignment 2/Zoo.html
+++ b/Assignment 2/Zoo.html
@@ -5,13 +5,13 @@
     <title>Exercise 2 - Zoo</title>
   </head>
   <body>
-    <p><img src="D:\CTK CLASSWORK\Assignment 2\Images\Zoo.gif" alt="zoo"></p>
+    <p><img src="https://samkobet.github.io/CTK301/Assignment%202/Images/Zoo.gif" alt="zoo"></p>
     <p>A very deformed looking black panther is crouched and roaring. Big title advertising the Brookefield Zoo. From the Federal Art Project.</p>
 
     <ul>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\index.html">Index</a></li>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\Teeth.html">Teeth</a></li>
-    <li><a href="D:\CTK CLASSWORK\Assignment 2\Poster.html">Poster</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/index.html">Index</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Teeth.html">Teeth</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Poster.html">Poster</a></li>
     </ul>
   </body>
 </html>
