--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -14,8 +14,8 @@
     <p><img src="https://samkobet.github.io/CTK301/Assignment%202/Images/eyes.JPEG" alt="eyes"></p>
     <p>Its a dude with goggles on looking fabulous with some workers in the background. Big header that says "Save You Eyes Use Your Goggles" from WPA Illinois Safety Division.</p>
     <ul>
-  <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Assignment 2/Poster.html">Poster</a></li>
-  <li><a href=https://samkobet.github.io/CTK301/Assignment%202/Teeth.html">Teeth</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Poster.html">Poster</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Teeth.html">Teeth</a></li>
   <li><a href="https://samkobet.github.io/CTK301/Assignment%202/Zoo.html">Zoo</a></li>
 </ul>
 
