--- a/assignment2/courses.html
+++ b/assignment2/courses.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Creative Technologies Courses (CTK)</h1>
 
-    <img src="D:\CTK CLASSWORK\assignment2\knight.jpg">
+    <img src="https://samkobet.github.io/CTK301/assignment2/knight.jpg">
     <p>
 
     <h2>201 BASIC SKILLS IN THE DIGITAL ARTS</h2>
@@ -85,8 +85,8 @@
 
 
     <ul>
-    <li><a href="D:\CTK CLASSWORK\assignment2\index.html">Main</a></li>
-    <li><a href="D:\CTK CLASSWORK\assignment2\req.html">Requirements</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/assignment2/index.html">Main</a></li>
+    <li><a href="https://samkobet.github.io/CTK301/assignment2/req.html">Requirements</a></li>
     </ul>
 
 
