--- a/assignment2/req.html
+++ b/assignment2/req.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Admission and Retention Requirements</h1>
 
-<img src="D:\CTK CLASSWORK\assignment2\shrek.jpg">
+<img src="https://samkobet.github.io/CTK301/assignment2/shrek.jpg">
 
     <p>All students must undergo a portfolio review and/or an interview with the Creative Technologies Admissions Committee before being admitted into the program. The Committee will evaluate admission requests from new beginning freshman, new transfer students, and internal transfers. The Creative Technologies program reserves the right to maintain a balanced enrollment and the number of students wishing to enter the Creative Technologies program may be restricted.</p>
 
@@ -40,8 +40,8 @@
 
 
     <ul>
-  <li><a href="D:\CTK CLASSWORK\assignment2\index.html">Main</a></li>
-  <li><a href="D:\CTK CLASSWORK\assignment2\courses.html">Courses</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/assignment2/index.html">Main</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/assignment2/courses.html">Courses</a></li>
 </ul>
 
     </body>
