--- a/assignment2/req.html
+++ b/assignment2/req.html
@@ -41,6 +41,7 @@
 
     <ul>
   <li><a href="https://samkobet.github.io/CTK301/assignment2/index.html">Main</a></li>
+   <li><a href="https://samkobet.github.io/CTK301/assignment2/rex.html">Requirements</a></li>
   <li><a href="https://samkobet.github.io/CTK301/assignment2/courses.html">Courses</a></li>
 </ul>
 
