--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -17,7 +17,8 @@
     <p>The major in Creative Technologies is an interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre and dance. The degree provides undergraduate training and experiences in creative technologies to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and Web design.</p>
 
     <ul>
-  <li><a href="https://samkobet.github.io/CTK301/assignment2/req.html">Requirements</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/assignment2/index.html">Main</a></li>
+   <li><a href="https://samkobet.github.io/CTK301/assignment2/rex.html">Requirements</a></li>
   <li><a href="https://samkobet.github.io/CTK301/assignment2/courses.html">Courses</a></li>
 </ul>
   </body>
