--- a/assignment2/courses.html
+++ b/assignment2/courses.html
@@ -86,7 +86,8 @@
 
     <ul>
     <li><a href="https://samkobet.github.io/CTK301/assignment2/index.html">Main</a></li>
-    <li><a href="https://samkobet.github.io/CTK301/assignment2/req.html">Requirements</a></li>
+   <li><a href="https://samkobet.github.io/CTK301/assignment2/rex.html">Requirements</a></li>
+  <li><a href="https://samkobet.github.io/CTK301/assignment2/courses.html">Courses</a></li>
     </ul>
 
 
