--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>The Artwork of Sam Kobetitsch</title>
+	<title>Contact</title>
 	<link href="front.css" rel="stylesheet" type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
   </header>
 	<nav>
     <ul>
-      <li><a href="front.html">Home</a></li>
+			<li><a href="front.html">Home</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="comm.html">Commissions</a></li>
       <li><a href="contact.html">Contact</a></li>
