--- a/Portfolio/comm.html
+++ b/Portfolio/comm.html
@@ -26,15 +26,29 @@
     </ul>
 	</nav>
 
-	<main>
-		<img class="left" src="motherfucker2.png">
-		<img class="right" src="solaris.png">
-		<div class="about"><h2>About</h2>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-		<img class="small" src="tick.png"><img class="small" src="palefur.png">
-  </div></main>
+<div class="comm"><h2>Icon - $20 each</h2><br>
+A headshot/bust of your character with complex shading, lighting, and a background of a gradient or simple pattern. Please specify specific color palettes, desired moods, poses, expressions, or anything else you'd like included/portrayed.<br><br>
+<img src="icon1.png" width="400px";><img src="icon2.png" width="400px";><img src="icon3.png" width="400px";><br><br>
+</div><br><br>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2KDA_1aZt_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="comm"><h2>Halfbody - $30 each</h2><br>
+A halfbody drawing of your character with simple shading, lighting, and a background of a gradient or simple pattern. Please specify specific color palettes, desired moods, poses, expressions, or anything else you'd like included/portrayed.<br><br>
+<img src="halfbody1.png" height="500px";><img src="punk.png" height="500px";><br><br>
+</div><br><br>
+
+<div class="comm"><h2>Fullbody - $40 each</h2><br>
+A fullbody drawing of your character with simple shading, lighting, and a transparent background. Simply pattern/gradient backgrounds availible upon request. Please specify specific color palettes, desired moods, poses, expressions, or anything else you'd like included/portrayed. Anything not specified will be given to artistic liberty. <br><br>
+<img src="oooo fox 1.png" height="300px";><img src="fullbody1.png" height="300px";><img src="purespirit.png" height="300px";><br><br>
+</div><br><br>
+
+<div class="comm"><h2>Illustration - starting at $50</h2><br>
+A fullbody illustration of your character complete with complex shading/lighting and a background of your choice. Please make sure to give as many details as possible upon ordering. Sketches/concepts will be sent periodically as I work on your piece.<br><br>
+<img src="DRAGON.png" height="500px";;><img src="zev.png" height="500px";;><br><br>
+</div><br><br>
+
+<div class="comm"><h2>Animated Character - starting at $50</h2><br>
+A flat colored fullbody drawing of your character with tweened animation. Will have a motion loop similar to a video game idle animation.<br><br>
+<img src="animated1.gif" height="500px";><img src="animated2.gif" height="500px";><br><br>
 
 	<footer>
 <i class="bi bi-instagram"></i>      <i class="bi bi-twitter"></i>      <i class="bi bi-youtube"></i>
