--- a/Portfolio/front.html
+++ b/Portfolio/front.html
@@ -30,11 +30,11 @@
 		<img class="left" src="motherfucker2.png">
 		<img class="right" src="solaris.png">
 		<div class="about"><h2>About</h2>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-		<img class="small" src="tick.png"><img class="small" src="palefur.png">
+    <p>My name is Samantha Kobetitsch, sometimes known as Jaymie. I'm a digital artist based in Illinois, currently attending Illinois State University for a bachelor's in Creative Technology. I like drawing animals and fantastical scenes, and I'm heavily inspired by works such as the Legend of Zelda, His Dark Materials, Elder Scrolls, and various anime. I'm a cat lover that loves painting space and I'm interested in mysticism and the occult, which all will commonly find its way into my work. </p>
+		<br><iframe width="560" height="315" src="https://www.youtube.com/embed/2KDA_1aZt_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div></main>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2KDA_1aZt_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 	<footer>
 <i class="bi bi-instagram"></i>      <i class="bi bi-twitter"></i>      <i class="bi bi-youtube"></i>
